<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Users.presentation.fragments.UserFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cpWhite"
            android:elevation="0dp"
            android:paddingHorizontal="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/search_cancel"
                    android:textColor="@color/cpTextDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/searchViewHeader"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/searchViewHeader"
                    app:layout_constraintTop_toTopOf="@+id/searchViewHeader"
                    app:layout_constraintVertical_bias="0.5" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="40dp"

                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/round_viewbutton"
                    android:theme="@style/SearchView"
                    app:closeIcon="@drawable/ic_border_cross_cancel"
                    app:iconifiedByDefault="false"
                    app:layout_constraintEnd_toStartOf="@+id/backButton"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:queryBackground="@null"
                    app:queryHint="@string/search_here"
                    app:searchIcon="@null" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/user_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:overScrollMode="never"
            android:paddingHorizontal="10dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            tools:listitem="@layout/item_user" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <TextView
                android:id="@+id/creat_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_C"
                android:textColor="@color/cpTextDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.312" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:visibility="gone"
                android:paddingHorizontal="50dp"
                android:text="@string/search_H_C_T"
                android:textColor="@color/cpHelpText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creat_search" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_no_result_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_result_found"
                android:textAlignment="center"
                android:textColor="@color/cpTextDark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
